--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -7,10 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Paragraf#1!</p>
-    <p>Paragraf#2!</p>
-    <p>Paragraf#3!</p>
-    <a href="http://google.com">Link</a>
-    <a href="kontakt">Kontakt</a>
+    <p>Kontakt</p>
 </body>
 </html>
