--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <p>Paragraf#2!</p>
     <p>Paragraf#3!</p>
     <a href="http://google.com">Link</a>
-    <a href="kontakt">Kontakt</a>
+    <a href="zadania-domowe/zadanie-1/">Kontakt</a>
 </body>
 </html>
