--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <p>Paragraf#1!</p>
     <p>Paragraf#2!</p>
     <p>Paragraf#3!</p>
-    <a href="http://google.com">Link</a>
-    <a href="zadania-domowe/zadanie-1/">Kontakt</a>
+    <a href="http://google.com" target = "_blank">Link</a>
+    <a href="zadania-domowe/zadanie-1/">Zadanie 1</a>
+
+    <a href="/formularz">Formularz</a>
+
 </body>
 </html>
