--- a/formularz/index.html
+++ b/formularz/index.html
@@ -25,5 +25,6 @@
 
     <label for="text">Wiadomosc</label>
     <textarea name="message" id="text" cols="30" rows="10" placeholder="wpisz tekst"></textarea>
+    <a href="https://formspree.io/">Wyślij</a>
 </body>
 </html>
