--- a/formularz/index.html
+++ b/formularz/index.html
@@ -20,7 +20,7 @@
         <input type="email" name="mail" id="email" placeholder="wpisz tekst">
 
         <label for="phone">Numer telefonu</label>
-        <input type="number" name="number" id="phone" placeholder="wpisz numer">
+        <input type="tel" name="number" id="phone">
 
         <br>
 
