--- a/formularz/index.html
+++ b/formularz/index.html
@@ -26,7 +26,7 @@
 
         <label for="text">Wiadomosc</label>
         <textarea name="message" id="text" cols="30" rows="10" placeholder="wpisz tekst"></textarea>
-        <a href="https://formspree.io/">Wyślij</a>
+        <input type="button" value="Wyślij">
     </form>
 </body>
 </html>
