--- a/formularz/index.html
+++ b/formularz/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="form.php" method="POST">
+        <form action="https://formspree.io/mrboyownik@gmail.com" method="POST">
         <label for="name">Imie</label>
         <input type="text" name="1name" id="name" placeholder="wpisz tekst">
 
