--- a/formularz/index.html
+++ b/formularz/index.html
@@ -9,23 +9,23 @@
 <body>
         <form action="https://formspree.io/d99.gluch@gmail.com" method="POST">
         <label for="name">Imie</label>
-        <input type="text" name="1name" id="name" placeholder="wpisz tekst">
+        <input type="text" name="imie" id="name" placeholder="wpisz tekst">
 
         <label for="lastname">Nazwisko</label>
-        <input type="text" name="2name" id="lastname" placeholder="wpisz tekst">
+        <input type="text" name="nazwisko" id="lastname" placeholder="wpisz tekst">
 
         <br>
 
         <label for="email">Email</label>
-        <input type="email" name="mail" id="email" placeholder="wpisz tekst">
+        <input type="email" name="email" id="email" placeholder="wpisz tekst">
 
         <label for="phone">Numer telefonu</label>
-        <input type="tel" name="number" id="phone">
+        <input type="tel" name="numer" id="phone">
 
         <br>
 
         <label for="text">Wiadomosc</label>
-        <textarea name="message" id="text" cols="30" rows="10" placeholder="wpisz tekst"></textarea>
+        <textarea name="wiadomosc" id="text" cols="30" rows="10" placeholder="wpisz tekst"></textarea>
         <input type="submit" value="Wyslij">
     </form>
 </body>
