--- a/formularz/index.html
+++ b/formularz/index.html
@@ -11,7 +11,7 @@
         <label for="name">Imie</label>
         <input type="text" name="imie" id="name" placeholder="wpisz tekst">
 
-        <label for="lastname">Nazwisko</label>
+        <label for="surname">Nazwisko</label>
         <input type="text" name="nazwisko" id="lastname" placeholder="wpisz tekst">
 
         <br>
@@ -25,7 +25,7 @@
         <br>
 
         <label for="text">Wiadomosc</label>
-        <textarea name="wiadomosc" id="text" cols="30" rows="10" placeholder="wpisz tekst"></textarea>
+        <textarea name="message" id="text" cols="30" rows="10" placeholder="wpisz tekst"></textarea>
         <input type="submit" value="Wyslij">
     </form>
 </body>
