--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+<style type="text/css">
+		#bepis{
+			size: 10px;
+			color: #FFFFFF;
+			font-family: "Comic Sans MS";
+		}
+		#bepis:hover{
+			size: 50px;
+			color: #FFC0CB;
+		}
+
+	</style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +22,7 @@
     <p>Paragraf#1!</p>
     <p>Paragraf#2!</p>
     <p>Paragraf#3!</p>
+    <p id="bepis">BEPIS</p>
     <a href="http://google.com" target = "_blank">Link</a>
     <a href="zadania-domowe/zadanie-1/">Zadanie 1</a>
     <a href="/formularz">Formularz</a>
